Initial index.py commit

--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@ David Nie,  dnie<br>
 Daniel Hahn,  danielph<br>
 Esther Liao, erliao<br>
 
-<P> The 1-paragraph elevator speech description goes here.
+<P> You hate the current textbook exchange applications? We do.
+Now introducing Nextbook, Princeton's next textbook exchange application.
+We are introducing multifield search capabilities, 
+watchlist, 
+easy buy and sell through text and email,
+on your phone.
+It's fast and simple and on the go. What are you waiting fo'.
 
-<P> How to access or create a running version of your system.
-If your system is web-based, this should be a URL.
-If your system is a phone application,
-this could reference an installable version, or
-you will have to visit a session with TAs.
+<P> App access:
+We will privately visit you to demonstrate the capabilities of our application.
 
-<p> Provide passwords, including administrative access, if we will need them
-to experiment with your system.
-<i> Please make this as easy for us as possible.</i>  There are 51 projects and if
-we have to blow 15 minutes figuring out how to run your system, that's one very
-long day wasted.
+<p> Administrative access(password):
+See developer guide
 
-<P> Who to contact in case something goes wrong.
+<P> Jake Reichel
 
 <blockquote>
-<P> <a href="a-link-to-your-project-web-page"> A link to your project's web page</a>
+<P> <a href="https://danielph312.github.io/PTBE/"> A link to your project's web page</a>
 or home page or the like: the place to find all public information
 about your project.
 This may be the same link as the "how to access a running version"
