--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ See developer guide
 <P> Jake Reichel
 
 <blockquote>
-<P> <a href="https://danielph312.github.io/PTBE/"> A link to your project's web page</a>
+<P> <a href="https://danielph312.github.io/PTBE/"> Nextbook Page </a>
 or home page or the like: the place to find all public information
 about your project.
 This may be the same link as the "how to access a running version"
@@ -50,8 +50,7 @@ The
 
 <P> <a href="productguide.pdf">productguide.pdf</a>.  Note: PDF only!
 
-<P> <a href="demo.pdf">your demo slides, etc., if you used them</a>.
-Please submit these as PDF or as a web page, not Powerpoint.
+<P> <a href="https://drive.google.com/file/d/0Bz4QTCBBnilKZTRGTkkzNVZHdnM/view?usp=sharing">Demo Slides</a>.
 </blockquote>
 
 <P> These links must point to PDF files <b>with <i>exactly</i> the
